// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Voe charlestoughrace.com custom domain 1`] = `
[
  {
    "format": "hls",
    "label": "VOE (MFP)",
    "meta": {
      "bytes": 1116691496,
      "extractorId": "voe",
      "height": 720,
      "title": "Battle Royale [1080P] .mp4 bei VOE ansehen",
    },
    "ttl": 900000,
    "url": "https://ugc-cdn-caching-n3vhfrcgzcntzyhsiv.cloudwindow-route.com/engine/hls2-c/01/11288/bzbttzsmgnca_,n,.urlset/master.m3u8",
  },
]
`;

exports[`Voe embed only urls which otherwise lead to 404 1`] = `
[
  {
    "format": "hls",
    "label": "VOE (MFP)",
    "meta": {
      "extractorId": "voe",
      "height": 800,
      "title": "Weapons.2025.German.DL.1080p.WEB.H264-ZeroTwo_encoded.mp4",
    },
    "ttl": 900000,
    "url": "https://mediaflow.test.org/proxy/hls/manifest.m3u8",
  },
]
`;

exports[`Voe encoding error 1`] = `[]`;

exports[`Voe jilliandescribecompany 1`] = `
[
  {
    "format": "hls",
    "label": "VOE (MFP)",
    "meta": {
      "bytes": 1202590842,
      "extractorId": "voe",
      "height": 720,
      "title": "Superman.2025.2160p.WEB-DL.DV.HDR10Plus.X265.DDP5.1.Atmos-YIN.mp4 bei VOE ansehen",
    },
    "ttl": 900000,
    "url": "https://ugc-cdn-caching-n3onxj7ixldkjwtbh5.cloudwindow-route.com/engine/hls2-c/01/15242/ea21l02gcygw_,n,.urlset/master.m3u8",
  },
]
`;

exports[`Voe no file size in page 1`] = `
[
  {
    "format": "hls",
    "label": "VOE (MFP)",
    "meta": {
      "extractorId": "voe",
      "height": 720,
      "title": "No Size Movie",
    },
    "ttl": 900000,
    "url": "https://mediaflow.test.org/proxy/hls/manifest.m3u8",
  },
]
`;

exports[`Voe premium only without resolution 1`] = `
[
  {
    "format": "hls",
    "label": "VOE (MFP)",
    "meta": {
      "bytes": 363216240,
      "extractorId": "voe",
      "height": 800,
      "title": "268836--21ba9fb2-97f9-4566-b5eb-3d9cef7674cf--zrxn--2352322-voesx.mp4",
    },
    "ttl": 900000,
    "url": "https://mediaflow.test.org/proxy/hls/manifest.m3u8",
  },
]
`;
